<resources>

    <string name="app_name">校园淘</string>
    <string name="hint_userName_input">用户名</string>
    <string name="hint_userPass_input">密码</string>
    <string name="btn_qq">QQ登录</string>
    <string name="btn_webchat">微信登录</string>
    <string name="btn_login">登录</string>
    <string name="btn_regist">注册新账号</string>
    <string name="btn_return_login">返回登录</string>
    <string name="btn_regist_1">注册</string>
    <string name="time_out">请求超时</string>
    <string name="file_not_find">请求地址错误</string>
    <string name="bad_request">请求格式错误</string>
    <string name="unknow_response">未知的请求回应</string>
    <string name="unknow_exception">未知的请求异常</string>
    <string name="file_check_error">文件校验失败</string>
    <string name="check_sys_time">检查系统时间</string>
    <string name="name_pass_not_empty">用户名或密码不能为空~</string>
    <string name="mine">我</string>
    <string name="text_publish">发布</string>
    <string name="index">首页</string>
    <string name="category">功能菜单</string>
    <string name="text_sort">排序</string>
    <string name="text_sort_by_price">价格</string>
    <string name="text_sort_by_popularity">人气</string>
    <string name="text_sort_by_latest">最新</string>
    <string name="text_empty_data">还没有交易数据~</string>
    <string name="text_default_createdate">7月28号</string>
    <string name="text_default_browwe_count">已有1亿亿人浏览过</string>
    <string name="text_default_newrate">9成新</string>
    <string name="text_default_tradeplace">浦东</string>
    <string name="text_default_price">1200元</string>
    <string name="text_default_title">毕业大甩卖</string>
    <string name="text_loading">正在加载...</string>
    <string name="action_search">搜索</string>
    <string name="text_hint_search">输入要搜索的商品</string>
    <string name="text_hint_title">标题</string>
    <string name="text_hint_des">交易描述</string>
    <string name="text_hint_price">价格</string>
    <string name="text_add">添加</string>
    <string name="text_take_photo">拍照</string>
    <string name="text_select_from_gallery">从相册选择</string>
    <string name="text_cancel">取消</string>
    <string name="text_complete">完成</string>

</resources>