<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:paddingLeft="35dp"
    android:paddingRight="35dp" >

    <LinearLayout
        android:id="@+id/lin_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/image_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:src="@drawable/campus_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_login"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@id/edit_userName"
                    android:layout_width="match_parent"
                    android:layout_height="47dip"
                    android:layout_marginLeft="10dp"
                    android:background="@color/login_input_bg"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/figure"
                    android:hint="@string/hint_userName_input"
                    android:imeOptions="actionNext"
                    android:maxLength="64"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@android:color/black"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="47.0dip"
                    android:layout_marginLeft="10dp"
                    android:background="@color/login_input_bg"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/lock"
                    android:hint="@string/hint_userPass_input"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@android:color/black"
                    android:textSize="16.0sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_selector"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btn_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_regist_selector"
            android:padding="5dp"
            android:text="@string/btn_regist"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:drawableLeft="@drawable/qq_icon"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/btn_qq"
        android:textColor="@android:color/black"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btn_webchat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/btn_qq"
        android:background="@null"
        android:drawableLeft="@drawable/webchat_icon"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/btn_webchat"
        android:textColor="@android:color/black"
        android:textSize="13sp" />

</RelativeLayout>