<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:paddingLeft="35dp"
    android:paddingRight="35dp" >

    <LinearLayout
        android:id="@+id/lin_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/image_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:src="@drawable/campus_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_form_row3"
            android:orientation="vertical"
            android:padding="5dp" >

            <EditText
                android:id="@id/edit_userName"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginLeft="10dp"
                android:background="@color/login_input_bg"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_content_account"
                android:hint="@string/hint_userName_input"
                android:imeOptions="actionNext"
                android:maxLength="64"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16.0sp" />

            <EditText
                android:id="@id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="47.0dp"
                android:layout_marginLeft="10dp"
                android:background="@color/login_input_bg"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_content_password"
                android:hint="@string/hint_userPass_input"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16.0sp" />

            <EditText
                android:id="@+id/edit_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="47.0dp"
                android:layout_marginLeft="10dp"
                android:background="@color/login_input_bg"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_content_password"
                android:hint="@string/hint_userPass_input"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16.0sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_regist_selector"
            android:text="@string/btn_regist_1"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_return_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login_selector"
            android:padding="5dp"
            android:text="@string/btn_return_login"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>